# references-tractor

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_installation.py
docs/: api.md  contribute.md  evaluation.md  examples.md
evaluation/: api_linking_test.json  evaluate_citations.py  generate_summary_evaluation.py
evaluation_results/: 01_summary_dashboard_20250628_165622.txt  02_accuracy_metrics_20250628_165622.tsv  03_comparison_table_20250628_165622.tsv  04_crossref_detailed_20250628_165622.tsv  04_ensemble_detailed_20250628_165622.tsv  04_hal_detailed_20250628_165622.tsv  04_openaire_detailed_20250628_165622.tsv  04_openalex_detailed_20250628_165622.tsv  04_pubmed_detailed_20250628_165622.tsv  05_results_20250628_165622.json  README.md
src/references_tractor/: __init__.py  core.py
src/references_tractor/search/: __init__.py  api_capabilities.py  citation_formatter.py  field_mapper.py  progressive_search.py  search_api.py
src/references_tractor/utils/: __init__.py  citation_evaluator.py  entity_validation.py  prescreening.py  span.py
